support sync github issue
