# utils/response.go
@@ -8,13 +8,15 @@ import (
 )
 
 const (
-	CodeSuccess  = 200
-	CodeNotFound = 404
+	CodeSuccess     = 200
+	CodeNotFound    = 404
+	CodeBadeRequest = 400
 )
 
 const (
-	MsgSuccess  = "请求成功"
-	MsgNotFound = "访问的资源不存在"
+	MsgSuccess    = "请求成功"
+	MsgNotFound   = "访问的资源不存在"
+	MsgBadRequest = "请求参数错误"
 )
 
 //NotFoundError response access resource does not exist
@@ -25,4 +27,8 @@ func NotFoundError(c *gin.Context) {
 //SuccessWithData response success response with data
 func SuccessWithData(c *gin.Context, data interface{}) {
 	c.JSON(http.StatusOK, models.BaseResp{Code: CodeSuccess, Msg: MsgSuccess, Data: data})
+}
+
+func BadRequest(c *gin.Context) {
+	c.JSON(http.StatusBadRequest, models.BaseResp{Code: CodeBadeRequest, Msg: MsgBadRequest,})
 }
